--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "application-name",
+  "name": "alive",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,6 +7,16 @@
   },
   "dependencies": {
     "express": "3.4.4",
-    "ejs": "*"
+    "ejs": "*",
+    "express3-handlebars": "~0.5.0",
+    "socket.io": "~0.9.16"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.2",
+    "grunt-contrib-sass": "~0.7.2",
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-coffee": "~0.10.1",
+    "rehab": "0.0.3",
+    "grunt-exec": "~0.4.5"
   }
 }
